# sc-win-updater

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: release.yml
locale/: babel.cfg
locale/en/LC_MESSAGES/: messages.po
locale/fr/LC_MESSAGES/: messages.po
scripts/: export.py  i18n_update.py  sign.py
src/: main.py
src/common/: __init__.py  admin.py  exception.py  i18n.py
src/gui/: updater_app.py
src/version_installer/: installer_status.py  version_installer.py
